--- a/PortFolion/PortFolion/PortFolion.csproj
+++ b/PortFolion/PortFolion/PortFolion.csproj
@@ -134,6 +134,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ListComponent\BrokerEdit\Class1.cs" />
+    <Compile Include="ListComponent\BrokerEdit\Class2.cs" />
     <Compile Include="ListComponent\Edit\NodeTagEdit.cs" />
     <Compile Include="ListComponent\Edit\NodeTagEditWindow.xaml.cs">
       <DependentUpon>NodeTagEditWindow.xaml</DependentUpon>
