--- a/PortFolion/PortFolion/app.config
+++ b/PortFolion/PortFolion/app.config
@@ -7,6 +7,14 @@
         <assemblyIdentity name="LiveCharts" publicKeyToken="0bc1f845d1ebb8df" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-0.9.7.0" newVersion="0.9.7.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Reactive.Core" publicKeyToken="94bc3704cddfc263" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.3000.0" newVersion="3.0.3000.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Reactive.Interfaces" publicKeyToken="94bc3704cddfc263" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1000.0" newVersion="3.0.1000.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
