--- a/PortFolion/PortFolion/packages.config
+++ b/PortFolion/PortFolion/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
   <package id="ExpressionEvaluator" version="2.0.4.0" targetFramework="net452" />
   <package id="Houzkin" version="1.0.8" targetFramework="net452" />
   <package id="Houzkin.Architecture" version="1.0.7" targetFramework="net452" />
@@ -8,7 +9,14 @@
   <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
   <package id="LivetCask" version="1.3.1.0" targetFramework="net452" />
-  <package id="MahApps.Metro" version="1.4.3" targetFramework="net452" />
-  <package id="MahApps.Metro.IconPacks.Material" version="1.8.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="MahApps.Metro" version="1.6.1" targetFramework="net461" />
+  <package id="MahApps.Metro.IconPacks.Material" version="2.2.0" targetFramework="net461" />
+  <package id="ReactiveProperty" version="4.2.1" targetFramework="net461" />
   <package id="System.Interactive" version="3.1.1" targetFramework="net452" />
+  <package id="System.Reactive" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net461" />
+  <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net461" />
 </packages>
