--- a/PortFolion/PortFolion/app.config
+++ b/PortFolion/PortFolion/app.config
@@ -7,6 +7,10 @@
         <assemblyIdentity name="LiveCharts" publicKeyToken="0bc1f845d1ebb8df" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-0.9.7.0" newVersion="0.9.7.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
