--- a/PortFolion/PortFolionCore/packages.config
+++ b/PortFolion/PortFolionCore/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CsvHelper" version="6.1.1" targetFramework="net461" />
+  <package id="CsvHelper" version="18.0.0" targetFramework="net461" />
   <package id="Houzkin" version="1.0.8" targetFramework="net452" />
   <package id="Houzkin.Tree" version="1.0.10" targetFramework="net452" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
